stop page overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,3 @@
-:root {
-  /* Colour Palette */
-}
-
 * {
   overflow-y: hidden;
   position: relative;
