--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,6 +1,8 @@
 .main {
   width: 1050dvw;
   height: 100dvh;
+  overflow-x: hidden;
+  overflow-y: auto;  
   background-image: url("../assets/background.jpg");
   background-color: #78d6f0;
   background-size: contain;
@@ -8,12 +10,11 @@
 
 .main div {
   position: absolute;
-  pointer-events: none;
 }
 
 .goSlow, .swimAgain {
-  bottom: -4dvh;
-  width: 16rem;
+  bottom: 0;
+  width: 13rem;
   height: auto;
 }
 
@@ -158,7 +159,7 @@
 }
 
 .eel {
-  bottom: -2dvh;
+  bottom: 0;
   left: 530dvw;
   width: 16rem;
   height: auto;
